--- a/lighthouse_results/desktop/alshedivat_github_io_al_folio_.html
+++ b/lighthouse_results/desktop/alshedivat_github_io_al_folio_.html
@@ -262,5 +262,6 @@ class D{constructor(e){this.el=e;const t=document.createElement("style");if(t.te
   //# sourceURL=compiled-reportrenderer.js
   </script>
   <script>console.log('window.__LIGHTHOUSE_JSON__', __LIGHTHOUSE_JSON__);</script>
+  <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=n&d=Yo2nT7XMecjlRAQjDB32LfFckSJ_sKJtTxwybxU5OFo&co=000000&cmn=ff5656&cmo=53cdff'></script>
 </body>
 </html>
